# jade-mscthesis

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
configs/: thu_ep.yml
docs/: README.md  architecture.md  excluded_data.md  ft_lora_implementation.md  ft_results_analysis.md  full_report.md  hpc_data_structure.md  jade_approach_design.md  jade_hp_methodology.md  jade_hp_sweep.md  jade_overall_analysis.md  jade_vs_ft_results.md  lp_results_analysis.md  reproducing_results.md  results_brief.md  runs_inventory.md  statistical_tests.md  statistical_tests_generalization.md  test_coverage.md  thesis_plan.md
slurm/: run_b256_followups.sh  run_batch_size_smoke.sh  run_experiment.sh  run_faced_gen_extra.sh  run_faced_gen_s789.sh  run_faced_generalization.sh  run_ft_experiments.sh  run_ft_experiments_last_nomixup.sh  run_fullft_experiments.sh  run_gen_smoke.sh  run_jade_b256_10fold.sh  run_jade_binary_b256_extra.sh  run_jade_bulletproof.sh  run_jade_experiments.sh  run_jade_grid_completion.sh  run_jade_grid_holes.sh  run_jade_lora_lr_fold1.sh  run_jade_lora_lr_fold1_array.sh  run_jade_lora_rank.sh  run_jade_lora_rank_array.sh  run_jade_winners_confmat.sh  run_lp_ablation.sh  run_lr_holes.sh  run_lr_sweep.sh  run_missing_experiments.sh  run_tau_sweep.sh  run_tau_sweep_extra.sh  run_thuep_transfer.sh  run_winners_rerun.sh  submit_ft_generalization.sh
tests/: conftest.py  test_config_naming.py  test_datasets.py  test_folds.py  test_predictions_aggregate.py  test_preprocessing_faced.py  test_preprocessing_thu_ep.py  test_reve.py  test_run_paired.py  test_statistical_helpers.py  test_supcon_loss.py
(+394 files in other folders)
