[project]
name = "zl-thesis"
version = "0.1.0"
description = "TU Delft Master Thesis Codebase"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "torch",
    "mne",
    "pyxdf",
    "transformers>=4.45,<4.57",
    "huggingface_hub[hf_xet]",
    "h5py",
    "click",
    "tqdm",
    "einops>=0.8.1",
    "peft>=0.18.1",
    "pytest>=9.0.2",
    "openpyxl>=3.1.5",
    "torchmetrics>=1.0",
    "wandb",
    "packaging",
    "lightning>=2.6.1",
    "tensorboard>=2.20.0",
    "ruff>=0.15.8",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "ipython",
    "ipykernel",
    "ipywidgets",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
# Run from project root so `src.*` imports resolve correctly.
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
# Target the same Python version as the project.
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# E/W = pycodestyle, F = pyflakes, I = isort
select = ["E", "W", "F", "I"]
ignore = [
    "E501",   # line too long — enforced by formatter, not linter
    "E402",   # module-level import not at top — intentional in train scripts (sys.path.insert)
    "E741",   # ambiguous variable name (l, O, I) — common in ML/math code
    "F841",   # unused local variable — figure handles in exploration scripts, metrics in training
]

[tool.ruff.lint.per-file-ignores]
# Test files import inside test methods deliberately (lazy imports for isolation)
"tests/**" = ["F401", "E402"]
